--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -53,7 +53,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Solicitar la información del usuario\n",
+    "name = input(\"Enter your name: \")\n",
+    "age = int(input(\"Enter your age: \"))\n",
+    "address = input(\"Enter your address: \")\n",
+    "salary = float(input(\"Enter your salary: \"))\n",
+    "expenses = float(input(\"Enter your expenses: \"))\n",
+    "\n",
+    "# Calcular el salario restante después de los gastos\n",
+    "remaining_salary = round(salary - expenses, 1)\n",
+    "\n",
+    "# Determinar si el salario restante es mayor o igual a 500\n",
+    "is_salary_good = remaining_salary >= 500\n",
+    "\n",
+    "# Formatear el mensaje de salida\n",
+    "message = (f\"{name}, who is {age} years old, and lives in {address} \"\n",
+    "           f\"has {remaining_salary} dollars left from their salary after expenses. \"\n",
+    "           f\"It is {is_salary_good} that they have more than $500 left.\")\n",
+    "\n",
+    "# Imprimir el mensaje\n",
+    "print(message)\n"
    ]
   },
   {
@@ -85,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +121,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "259\n",
+      "['some', 'say', 'the', 'world', 'will', 'end', 'in', 'fire', 'some', 'say', 'in', 'ice', 'from', 'what', 'i’ve', 'tasted', 'of', 'desire', 'i', 'hold', 'with', 'those', 'who', 'favor', 'fire', 'but', 'if', 'it', 'had', 'to', 'perish', 'twice', 'i', 'think', 'i', 'know', 'enough', 'of', 'hate', 'to', 'say', 'that', 'for', 'destruction', 'ice', 'is', 'also', 'great', 'and', 'would', 'suffice', 'python', 'is', 'awesome!']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "import string\n",
+    "\n",
+    "poem = \"\"\"Some say the world will end in fire,\n",
+    "Some say in ice.\n",
+    "From what I’ve tasted of desire\n",
+    "I hold with those who favor fire.\n",
+    "But if it had to perish twice,\n",
+    "I think I know enough of hate\n",
+    "To say that for destruction ice\n",
+    "Is also great\n",
+    "And would suffice.\"\"\"\n",
+    "\n",
+    "# Eliminar puntuación y convertir a minúsculas\n",
+    "poem_clean = poem.translate(str.maketrans(\"\", \"\", string.punctuation)).lower()\n",
+    "\n",
+    "# Concatenar con \"python is awesome!\"\n",
+    "new_string = poem_clean + \" python is awesome!\"\n",
+    "\n",
+    "# Imprimir la longitud de la nueva cadena\n",
+    "print(len(new_string))\n",
+    "\n",
+    "# Dividir la cadena en una lista usando el espacio como delimitador\n",
+    "poem_list = new_string.split()\n",
+    "\n",
+    "# Imprimir la lista resultante\n",
+    "print(poem_list)\n"
    ]
   }
  ],
@@ -126,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
